fix: channel/chat switch button visibility issues

--- a/src/styles/components/user-picker.scss
+++ b/src/styles/components/user-picker.scss
@@ -2,6 +2,7 @@
   @extend %flex-row;
   background: $background-root;
   height: 100%;
+  max-height: 85vh;
   width: 100%;
 
   .selected-items {
@@ -20,7 +21,7 @@
   }
 
   .rt-list-list {
-    max-height: 50vh;
+    //max-height: 50vh;
     padding-bottom: 0;
   }
 
